test/failing/badintfield9.trunnel

struct x {

   u8 b[a];
   u8 a;
}
